--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -1278,7 +1278,7 @@ ul.recipients {
     
     li a {
         display: block;
-        padding: .5rem 1rem;
+        padding:.5rem .7rem;
         cursor: pointer;
         border-radius: .7rem;
         white-space: nowrap;
