--- a/src/onegov/feriennet/theme/styles/feriennet.scss
+++ b/src/onegov/feriennet/theme/styles/feriennet.scss
@@ -3025,6 +3025,7 @@ li.unpaid {
     border: 1px solid  $gray;
     border-radius: 3px;
     padding: 0 .75rem .75rem;
+    margin-top: 1rem;
 
     &:first-of-type {
         margin-top: .75rem;
@@ -3033,57 +3034,33 @@ li.unpaid {
     h3 {
         font-size: .875rem;
         font-weight: bold;
-        margin-bottom: .75rem;
         margin-top: .75rem;
-    }
-
-    h3 + .needs {
-        margin-top: -5px;
+        margin-bottom: 0;
     }
 
     li {
         font-size: .875rem;
         margin-left: -3px;
         padding: 3px;
+        line-height: 1.2;
     }
 
-    & + .call-for-volunteers {
-        margin-top: 1rem;
-    }
 
     .dates::before {
         line-height: 1.25;
     }
 
-    .needs li {
-        display: flex;
-        justify-content: space-between;
-
-        a {
-            align-self: flex-end;
-            flex-shrink: 0;
+    .needs {
+        li:last-child .button {
+            margin-bottom: 0;
         }
-    }
 
-    .needs li:hover {
-        background: darken($gray-light, 1%);
-        border-radius: 3px;
-    }
-
-    .needs .button {
-        background: $success-color;
-        border: 1px solid darken($success-color, 5%);
-        border-radius: 3px;
-        float: right;
-        font-size: .875rem;
-        height: 22px;
-        line-height: 1.25;
-        margin: 0;
-        padding: 2px 5px;
-
-        &:hover,
-        &:active {
-            background: darken($success-color, 5%);
+        .button {
+            background: $success-color;
+            font-size: .875rem;
+            display: block;
+            margin-top: .5rem;
+            margin-bottom: .5rem;
         }
     }
 
