--- a/src/onegov/feriennet/theme/styles/feriennet.scss
+++ b/src/onegov/feriennet/theme/styles/feriennet.scss
@@ -3061,6 +3061,7 @@ li.unpaid {
             display: block;
             margin-top: .5rem;
             margin-bottom: .5rem;
+            width: fit-content;
         }
     }
 
