--- a/src/onegov/feriennet/theme/styles/feriennet.scss
+++ b/src/onegov/feriennet/theme/styles/feriennet.scss
@@ -810,7 +810,7 @@ ul.tags {
 /*
     My bookings
 */
-$booking-left-margin: 2rem;
+$booking-left-margin: 1.6rem;
 
 .my-bookings {
     $dark-foreground: scale-color($primary-color, $lightness: -62.5%, $saturation: -12.5%);
@@ -828,6 +828,8 @@ $booking-left-margin: 2rem;
 
         .rega-widget {
             display: flex;
+            border-radius: 0 !important;
+            border: 0;
             width: 100% !important;
 
             .left {
@@ -881,19 +883,13 @@ $booking-left-margin: 2rem;
         }
 
         h3 {
-            background: $dark-background;
-            color: $dark-foreground;
             font-weight: 500;
             margin: 0;
-
-            // 8.3333% is 1000 (row-width) / 12 (number of rows)
-            // -> one column wide in percentage
-            padding: .75rem 1rem .75rem;
         }
 
         .panel {
             font-size: .875rem;
-            padding: .5rem 1rem;
+            padding: 1rem;
             width: calc(100% - 1rem);
         }
 
@@ -903,7 +899,7 @@ $booking-left-margin: 2rem;
             position: relative;
 
             .star {
-                flex: 0 0 2rem;
+                flex: 0 0 #{$booking-left-margin};
             }
 
             .title {
@@ -920,18 +916,11 @@ $booking-left-margin: 2rem;
                 margin-bottom: .5rem;
                 margin-left: calc(#{$booking-left-margin} - .4rem);
             }
-
-            .actions {
-                flex: 0 0 100%;
-                margin-left: calc(#{$booking-left-margin} + 1px);
-            }
         }
 
         .booking-limit {
-            background: $light-background;
             font-size: .875rem;
             line-height: .875rem;
-            padding: .5rem;
         }
 
         ul {
@@ -945,7 +934,7 @@ $booking-left-margin: 2rem;
         }
 
         .bookings-by-state {
-            padding-left: 5rem;
+            padding-top: 2rem;
 
             > ul {
                 margin-bottom: 0;
@@ -958,8 +947,9 @@ $booking-left-margin: 2rem;
         }
 
         .total-costs {
-            background: $white-smoke;
-            font-family: $font-family-monospace;
+            border: 1px solid $gainsboro;
+            border-left: 0;
+            border-right: 0;
             margin-bottom: 1.5rem;
             margin-top: 0;
             padding: .75rem 1.2rem .75rem ;
@@ -967,10 +957,6 @@ $booking-left-margin: 2rem;
             .columns:last-child {
                 text-align: right;
             }
-        }
-
-        .no-total-costs {
-            margin-bottom: 1.5rem;
         }
 
         .total {
@@ -987,55 +973,44 @@ $booking-left-margin: 2rem;
 
         .fa-star-o,
         .fa-star {
-            font-size: 1.5rem;
+            font-size: 1.1rem;
             padding: 2px 0;
         }
 
-        .fa-star-o {
-            color: $base;
-        }
+    }
 
-        .fa-star {
-            color: $yellow;
-        }
+    .attendee-title {
+        padding: .5rem 1.5rem !important;
+        background: $gainsboro;
     }
 
     .state-title {
         background: $white;
         cursor: pointer;
         margin-top: 0;
-        padding: .75rem 1rem 0 0;
-        position: relative;
+        border-bottom: 1px solid $iron;
+        margin-bottom: .5rem;
+        padding-bottom: .2rem;
+        display: flex;
+        font-size: 1.3rem;
+        align-items: center;
 
         h4 {
-            border-bottom: 5px solid $steel;
-            color: $steel;
-            font-size: 1.1rem;
-            font-weight: bold;
-            padding-bottom: .5rem;
+            flex-grow: 1;
         }
 
-        &::after {
-            @include icon('\f055');
-
-            font-size: 1.2rem;
-            position: absolute;
-            right: 19px;
-            top: 12px;
+        .fa-chevron-down {
+            padding: .5rem;
+            border-radius: 5rem;
         }
 
-        &.toggled::after {
-            @include icon('\f056');
+        &:hover .fa-chevron-down {
+            background: $smoke;
         }
     }
 
     @mixin state-title-block($color) {
         $bleached: scale-color($color, $lightness: 70%, $saturation: -60%);
-
-        h4 {
-            border-color: $bleached;
-            color: $color;
-        }
 
         .state-title::after {
             color: $bleached;
@@ -1046,26 +1021,8 @@ $booking-left-margin: 2rem;
         }
     }
 
-    .state-open,
-    .state-cancelled {
-        @include state-title-block($steel);
-    }
-
-    .state-accepted {
-        @include state-title-block($green-dark);
-    }
-
-    .state-blocked {
-        @include state-title-block($orange-dark);
-    }
-
-    .state-denied {
-        @include state-title-block($red-dark);
-    }
-
     h5 {
-        font-size: 1.2rem;
-        font-weight: 500;
+        font-size: 1.1rem;
         margin-bottom: .25rem;
         max-width: 80%;
     }
@@ -1119,47 +1076,49 @@ $booking-left-margin: 2rem;
     }
 
     .actions {
-        ul {
-            left: -2.5ex;
-            margin: 0;
-            position: relative;
+        display:flex;
+        padding-bottom: 1rem;
+        margin-left: calc(#{$booking-left-margin} + 1px);
 
-            li {
+        .invite-link[data-group]::after {
+            @include group-code;
+            content: attr(data-group);
+            font-size: .8rem;
+            font-weight: normal;
+            margin-left: 1ex;
+        }
+
+        .cancel-link::before {
+            @include icon('\f256');
+        }
+
+        .delete-link::before {
+            @include icon('\f014');
+        }
+
+        .invite-link::before {
+            @include icon('\f004');
+        }
+
+
+        a {
+            margin-right: 1rem;
+            font-size: .875rem;
+            display: block;
+            margin-bottom: 0;
+
+            &::before {
                 display: block;
-                font-size: .875rem;
-                margin: 0 0 .25rem;
-
-                a {
-                    display: block;
-
-                    &::before {
-                        display: block;
-                        margin-right: .25ex;
-                        width: 2ex !important;
-                    }
-                }
-
-                .invite-link[data-group]::after {
-                    @include group-code;
-                    content: attr(data-group);
-                    font-size: .8rem;
-                    font-weight: normal;
-                    margin-left: 1ex;
-                }
-
-                .cancel-link::before {
-                    @include icon('\f256');
-                }
-
-                .delete-link::before {
-                    @include icon('\f014');
-                }
-
-                .invite-link::before {
-                    @include icon('\f004');
-                }
+                margin-right: .25ex;
+                width: 2ex !important;
             }
         }
+    }
+
+    .all-action-buttons {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 1rem;
     }
 }
 
@@ -1241,6 +1200,10 @@ $booking-left-margin: 2rem;
             display: none;
         }
     }
+}
+
+.filter-panel dt {
+    margin-bottom: 0;
 }
 
 .legend-panel {
@@ -2526,43 +2489,23 @@ li.unpaid {
     Attendee Details in Bookings View
 */
 .attendees-toggle {
-    align-items: center;
-    border-top: 1px dashed $gainsboro;
-    display: flex;
-    justify-content: center;
-    margin-bottom: -.875rem;
-    margin-right: 1rem;
-    margin-top: 1rem;
+    color: $primary-color;
+    border: 1px solid;
+    border-radius: 5rem;;
+    font-size: .875rem;
+    padding: .2rem .5rem;
+    height: fit-content;
+    transition: all linear .2s;
 
-    > div {
-        background: $white;
-        border: 1px dashed $base;
-        border-radius: 50px;
-        font-size: .875rem;
-        padding: 0 12px;
-        position: relative;
-        top: -.8rem;
-    }
-
-    :hover,
-    &.toggled {
-        color: $anchor-font-color;
-        cursor: pointer;
-    }
-
-    span:first-child::before {
-        @include icon('\f13a');
-        margin-right: .75ex;
-    }
-
-    &.toggled span:first-child::before {
-        content: '\f139';
+    &:hover,
+    &:has(i.down) {
+        background: $primary-color;
+        color: $white;
     }
 }
 
 .attendees-table {
     $column-width: grid-calc(1, 12);
-
     font-size: .8rem;
     margin-left: $booking-left-margin;
     padding: .75rem 0 1rem;
